[gd_scene load_steps=12 format=3 uid="uid://bjbk2udfsc1k"]

[ext_resource type="Script" uid="uid://1lx2gh3r176" path="res://scripts/title.gd" id="1_4rr2b"]
[ext_resource type="PackedScene" uid="uid://8rrqwhgre17n" path="res://scenes/die.tscn" id="2_pyl7j"]
[ext_resource type="Theme" uid="uid://cdfb7rjg0hht0" path="res://main_menu.tres" id="2_yql1r"]
[ext_resource type="ArrayMesh" uid="uid://d12ot36y2wq6m" path="res://assets/stage.obj" id="3_b3w7a"]
[ext_resource type="Script" uid="uid://hxrljlafp6i0" path="res://scripts/titledie.gd" id="3_pyl7j"]
[ext_resource type="Script" path="res://scripts/title_cmera.gd" id="5_b3w7a"]
[ext_resource type="Script" uid="uid://jhy36inqbalf" path="res://scripts/menu_control.gd" id="6_yql1r"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ia1n6"]
albedo_color = Color(0.0807833, 0.0807833, 0.0807833, 1)
roughness = 0.65

[sub_resource type="QuadMesh" id="QuadMesh_hiwto"]
material = SubResource("StandardMaterial3D_ia1n6")

[sub_resource type="Environment" id="Environment_b3w7a"]
background_mode = 1
background_color = Color(0.000340808, 0.025669, 0.232741, 1)
ambient_light_color = Color(0.0375275, 0.275382, 0.999993, 1)
ambient_light_energy = 2.15
volumetric_fog_enabled = true
volumetric_fog_density = 0.1
volumetric_fog_albedo = Color(0.901961, 0.909804, 1, 1)
volumetric_fog_emission_energy = 0.0

[sub_resource type="LabelSettings" id="LabelSettings_4rr2b"]
font_size = 60

[node name="Title" type="Node3D"]
script = ExtResource("1_4rr2b")

[node name="Scene" type="Node3D" parent="."]

[node name="die" parent="Scene" instance=ExtResource("2_pyl7j")]
transform = Transform3D(3.5, 0, 0, 0, 3.5, 0, 0, 0, 3.5, 0.667651, 4.72038, 9.11201)
script = ExtResource("3_pyl7j")

[node name="Stage" type="MeshInstance3D" parent="Scene"]
transform = Transform3D(1, 0, -1.74846e-07, 0, 1, 0, 1.74846e-07, 0, 1, 2.51001, 0.0818725, 9.47249)
mesh = ExtResource("3_b3w7a")

[node name="Spotlight" type="Node3D" parent="Scene/Stage"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 2.51001, -0.0818725, 9.47249)

[node name="Cyan" type="SpotLight3D" parent="Scene/Stage/Spotlight"]
transform = Transform3D(1, 0, 0, 0, -0.606197, 0.795315, 0, -0.795315, -0.606197, 0.492152, 10.8104, 4.3511)
light_color = Color(0, 0.8, 1, 1)
light_energy = 10.333
light_indirect_energy = 7.715
light_volumetric_fog_energy = 1.5
light_size = 0.092
light_specular = 0.59
shadow_enabled = true
shadow_bias = 0.1
spot_range = 63.921
spot_angle = 14.09

[node name="White" type="SpotLight3D" parent="Scene/Stage/Spotlight"]
transform = Transform3D(1, -2.13851e-07, -4.14098e-07, 2.13851e-07, -0.578911, 0.815391, -4.14098e-07, -0.815391, -0.578911, 4.02702, 10.8104, 4.3511)
light_energy = 10.819
light_indirect_energy = 5.235
light_volumetric_fog_energy = 1.05
light_size = 0.187
spot_range = 73.907
spot_angle = 18.76

[node name="Orange" type="SpotLight3D" parent="Scene/Stage/Spotlight"]
transform = Transform3D(1, -2.32417e-07, -3.83788e-07, 2.32417e-07, -0.463342, 0.886179, -3.83788e-07, -0.886179, -0.463342, 7.84939, 10.8104, 4.3511)
light_color = Color(1, 0.6, 0.2, 1)
light_energy = 9.89
light_indirect_energy = 4.884
light_volumetric_fog_energy = 3.975
light_size = 0.187
spot_range = 73.553
spot_angle = 17.86

[node name="Floor" type="MeshInstance3D" parent="Scene"]
transform = Transform3D(90, 0, 0, 0, -3.93402e-06, 90, 0, -90, -3.93402e-06, 0, 0, 0)
mesh = SubResource("QuadMesh_hiwto")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.99489, -0.100969, 0, 0.100969, 0.99489, 0.697398, 2.76546, 19.126)
environment = SubResource("Environment_b3w7a")
fov = 22.6
far = 1000.0
script = ExtResource("5_b3w7a")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("6_yql1r")

[node name="Play" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Play"]
layout_mode = 1
offset_left = -150.0
offset_right = 152.0
offset_bottom = 101.0

[node name="Easy" type="Button" parent="CanvasLayer/Play/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_yql1r")
text = "Level 1"

[node name="Medium" type="Button" parent="CanvasLayer/Play/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_yql1r")
text = "Level 2"

[node name="Hard" type="Button" parent="CanvasLayer/Play/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_yql1r")
text = "Level 3
"

[node name="Title" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -16.0
offset_top = -40.0
offset_right = 24.0
grow_horizontal = 2

[node name="Title" type="Label" parent="CanvasLayer/Title"]
layout_mode = 0
offset_left = -562.0
offset_top = 207.0
offset_right = 595.0
offset_bottom = 345.0
theme = ExtResource("2_yql1r")
text = "DiceDance"
label_settings = SubResource("LabelSettings_4rr2b")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="Timer" to="Scene/die" method="_on_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/Play/VBoxContainer/Easy" to="CanvasLayer" method="_on_button1_pressed"]
[connection signal="pressed" from="CanvasLayer/Play/VBoxContainer/Medium" to="CanvasLayer" method="_on_button2_pressed"]
[connection signal="pressed" from="CanvasLayer/Play/VBoxContainer/Hard" to="CanvasLayer" method="_on_button3_pressed"]
